--- a/.github/workflows/build-raspi-image.yml
+++ b/.github/workflows/build-raspi-image.yml
@@ -103,5 +103,5 @@ jobs:
         if: ${{ success() }}
         uses: actions/upload-artifact@v4
         with:
-          name: imswitch-raspi-lite
-          path: ${{ steps.build.outputs.image-path }}
+          name: raspios-custom-image
+          path: pi-gen/deploy/*
