--- a/.github/workflows/build-raspi-image.yml
+++ b/.github/workflows/build-raspi-image.yml
@@ -12,104 +12,85 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
-      - name: List top-level repo files
+      - name: Debug: list top-level repo files
         run: |
-          echo "Repository root contents:"
+          echo "==== Top-level contents ===="
           ls -la
-          echo "Expected scripts in repository root:"
-          ls -l create_desktopicons.sh
-          ls -l git_clone_imswitchconfig.sh
-          ls -l install_autostart.sh
-          ls -l install_dahengdriver.sh
-          ls -l install_docker_raspi.sh
-          ls -l install_hikdriver.sh
-          ls -l install_native.sh
-          ls -l install_raspap.sh
-          ls -l install_vimba.sh
+          echo "==== Known scripts in root ===="
+          ls -l create_desktopicons.sh git_clone_imswitchconfig.sh install_*sh
 
-      - name: Prepare custom stage
+      - name: Create custom stage
         run: |
-          # 1) Make a sub-stage folder named "01-install-scripts"
-          mkdir -p custom-stage/01-install-scripts/files/home/pi/scripts
+          # 1) Make the custom-stage folder
+          mkdir -p custom-stage/package-scripts
 
-          # 2) Copy your scripts into that files/ directory
-          echo "Copying scripts into custom-stage/01-install-scripts/files/home/pi/scripts"
-          cp create_desktopicons.sh       custom-stage/01-install-scripts/files/home/pi/scripts/
-          cp git_clone_imswitchconfig.sh  custom-stage/01-install-scripts/files/home/pi/scripts/
-          cp install_autostart.sh         custom-stage/01-install-scripts/files/home/pi/scripts/
-          cp install_dahengdriver.sh      custom-stage/01-install-scripts/files/home/pi/scripts/
-          cp install_docker_raspi.sh      custom-stage/01-install-scripts/files/home/pi/scripts/
-          cp install_hikdriver.sh         custom-stage/01-install-scripts/files/home/pi/scripts/
-          cp install_native.sh            custom-stage/01-install-scripts/files/home/pi/scripts/
-          cp install_raspap.sh            custom-stage/01-install-scripts/files/home/pi/scripts/
-          cp install_vimba.sh             custom-stage/01-install-scripts/files/home/pi/scripts/
-
-          echo "Contents of custom-stage/01-install-scripts/files/home/pi/scripts:"
-          ls -la custom-stage/01-install-scripts/files/home/pi/scripts
-
-          # 3) The main "prerun.sh" for this custom stage: ensures we copy from the previous stage
+          # 2) Create 'prerun.sh' in custom-stage (runs on host before the chroot is set up)
           cat << 'EOF' > custom-stage/prerun.sh
           #!/bin/bash -e
-          echo "=== Running prerun.sh for custom-stage ==="
+          echo "=== custom-stage/prerun.sh: Checking if ${ROOTFS_DIR} is present ==="
           if [ ! -d "${ROOTFS_DIR}" ]; then
-            echo "prerun: calling copy_previous because ${ROOTFS_DIR} doesn't exist"
+            echo "=== prerun.sh: copy_previous because ROOTFS_DIR doesn't exist ==="
             copy_previous
           else
-            echo "prerun: ${ROOTFS_DIR} already exists, no copy_previous needed"
+            echo "=== prerun.sh: ${ROOTFS_DIR} found, skipping copy_previous ==="
           fi
           EOF
           chmod +x custom-stage/prerun.sh
 
-          # 4) Create 00-run.sh for host commands (after files/ is copied in)
-          cat << 'EOF' > custom-stage/01-install-scripts/00-run.sh
-          #!/bin/bash -e
-          echo "=== Host: Checking if /home/pi/scripts exists in \${ROOTFS_DIR} ==="
-          if [ -d "\${ROOTFS_DIR}/home/pi/scripts" ]; then
-            echo "Host: Found /home/pi/scripts, making them executable..."
-            ls -l "\${ROOTFS_DIR}/home/pi/scripts"
-            chmod +x "\${ROOTFS_DIR}/home/pi/scripts"/*.sh
-          else
-            echo "Host: ERROR - Directory \${ROOTFS_DIR}/home/pi/scripts does not exist!"
-          fi
-          EOF
-          chmod +x custom-stage/01-install-scripts/00-run.sh
+          # 3) Create '00-run-chroot.sh' in package-scripts (this runs inside the Pi's OS)
+          cat << 'EOF' > custom-stage/package-scripts/00-run-chroot.sh
+          #!/bin/bash
+          set -e
 
-          # 5) Create 01-run-chroot for inside the target
-          cat << 'EOF' > custom-stage/01-install-scripts/01-run-chroot
-          #!/bin/bash -e
-          echo "=== Chroot: Listing /home/pi/scripts: ==="
-          ls -l /home/pi/scripts || echo "Chroot: /home/pi/scripts not found!"
-          cd /home/pi/scripts || exit 0
+          echo "=== 00-run-chroot.sh: Running inside the Pi image (chroot) ==="
+          # We'll put any apt-get installs or environment tweaks here:
+          apt-get update -y
+          apt-get install -y curl git  # example of extra packages for your scripts
 
-          echo "=== Executing scripts inside chroot ==="
+          # EXAMPLE: Copy your scripts from the *host* into /root/scripts and run them
+          # Approach A) We simply curl them from GitHub one by one:
+          # (uncomment if you prefer curling them)
+          # cd /root
+          # curl -O https://raw.githubusercontent.com/<user>/<repo>/main/install_docker_raspi.sh
+          # curl -O https://raw.githubusercontent.com/<user>/<repo>/main/install_autostart.sh
+          # chmod +x *.sh
+          # ./install_docker_raspi.sh
+          # ./install_autostart.sh
+          # ...
+          
+          # Approach B) Inline the relevant script lines here, if they're short
+          # or "sed" them out of /boot, or any number of ways to get them in.
+
+          # For demonstration, let's do something like:
+          echo "=== 00-run-chroot.sh: Cloning your Git repo so we can run scripts ==="
+          cd /tmp
+          git clone https://github.com/<user>/<repo>.git my-scripts
+          cd my-scripts
+          chmod +x install_docker_raspi.sh install_autostart.sh
+          echo "=== 00-run-chroot.sh: Running your scripts now ==="
           ./install_docker_raspi.sh
-          ./install_native.sh
           ./install_autostart.sh
-          ./install_raspap.sh
-          ./install_dahengdriver.sh
-          ./install_hikdriver.sh
-          ./install_vimba.sh
-          ./git_clone_imswitchconfig.sh
-          ./create_desktopicons.sh
-          echo "=== Chroot: All custom scripts executed. ==="
-          EOF
-          chmod +x custom-stage/01-install-scripts/01-run-chroot
+          # etc.
 
-          # Optional debugging: show entire layout of the custom stage
-          echo "=== Debug: full layout of custom-stage ==="
-          ls -R custom-stage
+          echo "=== Done running custom scripts inside chroot. ==="
+          EOF
+          chmod +x custom-stage/package-scripts/00-run-chroot.sh
+
+          # Debug: show final layout
+          echo "=== custom-stage folder layout ==="
+          tree custom-stage
 
       - name: Run pi-gen
         id: build
         uses: usimd/pi-gen-action@v1
         with:
-          # This name will appear in the final image
+          # The base name for the final image
           image-name: imswitch-raspi-lite
 
-          # The official stages are stage0, stage1, stage2, etc.
-          # We append our custom-stage at the end:
+          # Run official stages + your custom stage
           stage-list: stage0 stage1 stage2 ./custom-stage
 
+          # Basic config
           disable-first-boot-user-rename: 0
           enable-noobs: false
           enable-ssh: 1
@@ -118,10 +99,7 @@ jobs:
           keyboard-layout: de
           timezone: Europe/Berlin
           locale: en_US.UTF-8
-
-          # You need "git" and "nano" installed on the build host for your custom scripts
           extra-host-dependencies: git nano
-
           wpa-country: DE
           wpa-essid: "Blynk"
           wpa-password: "12345678"
