--- a/.github/workflows/build-raspi-image.yml
+++ b/.github/workflows/build-raspi-image.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
-      - name: Debug: list top-level repo files
+      - name: Debug list top-level repo files
         run: |
           echo "==== Top-level contents ===="
           ls -la
